--- a/app/src/main/res/layout/layout1.xml
+++ b/app/src/main/res/layout/layout1.xml
@@ -17,8 +17,8 @@
             tools:layout_editor_absoluteX="108dp"
             tools:layout_editor_absoluteY="497dp" />
 
-        <EditText
-            android:id="@+id/editTextPhone"
+        <TextView
+            android:id="@+id/TextPhone"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:ems="10"
@@ -28,8 +28,8 @@
             tools:layout_editor_absoluteX="101dp"
             tools:layout_editor_absoluteY="253dp" />
 
-        <EditText
-            android:id="@+id/editTextTextPersonName"
+        <TextView
+            android:id="@+id/TextTextPersonName"
             android:layout_width="221dp"
             android:layout_height="66dp"
             android:ems="10"
@@ -39,8 +39,8 @@
             tools:layout_editor_absoluteX="95dp"
             tools:layout_editor_absoluteY="41dp" />
 
-        <EditText
-            android:id="@+id/editTextTextEmailAddress2"
+        <TextView
+            android:id="@+id/TextTextEmailAddress2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:ems="10"
@@ -50,8 +50,8 @@
             tools:layout_editor_absoluteX="101dp"
             tools:layout_editor_absoluteY="343dp" />
 
-        <EditText
-            android:id="@+id/editTextTime"
+        <TextView
+            android:id="@+id/TextTime"
             android:layout_width="180dp"
             android:layout_height="54dp"
             android:ems="10"
@@ -61,8 +61,8 @@
             tools:layout_editor_absoluteX="16dp"
             tools:layout_editor_absoluteY="167dp" />
 
-        <EditText
-            android:id="@+id/editTextTextPersonName2"
+        <TextView
+            android:id="@+id/TextTextPersonName2"
             android:layout_width="184dp"
             android:layout_height="43dp"
             android:ems="10"
@@ -72,8 +72,8 @@
             tools:layout_editor_absoluteY="427dp"
             tools:ignore="MissingConstraints" />
 
-        <EditText
-            android:id="@+id/editTextTextPersonName3"
+        <TextView
+            android:id="@+id/TextTextPersonName3"
             android:layout_width="178dp"
             android:layout_height="41dp"
             android:ems="10"
@@ -83,8 +83,8 @@
             tools:layout_editor_absoluteY="427dp"
             tools:ignore="MissingConstraints" />
 
-        <EditText
-            android:id="@+id/editTextTextMultiLine"
+        <TextView
+            android:id="@+id/TextTextMultiLine"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:ems="10"
