--- a/app/src/main/res/layout/layout1.xml
+++ b/app/src/main/res/layout/layout1.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -101,6 +102,15 @@
             android:layout_height="54dp"
             tools:layout_editor_absoluteX="222dp"
             tools:layout_editor_absoluteY="164dp"
+            tools:ignore="MissingConstraints" />
+
+        <ImageButton
+            android:id="@+id/imageButton3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:srcCompat="@drawable/quantum_ic_arrow_back_grey600_24"
+            tools:layout_editor_absoluteX="16dp"
+            tools:layout_editor_absoluteY="41dp"
             tools:ignore="MissingConstraints" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
