--- a/app/src/main/res/layout/layout1.xml
+++ b/app/src/main/res/layout/layout1.xml
@@ -1,117 +1,100 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+    <TextView
+        android:id="@+id/TextTextPersonName"
+        android:layout_width="221dp"
+        android:layout_height="66dp"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:text="Restaurant 1"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="95dp"
+        tools:layout_editor_absoluteY="54dp" />
 
-        <Button
-            android:id="@+id/button"
-            android:layout_width="194dp"
-            android:layout_height="88dp"
-            android:text="Report Time and Team"
-            tools:ignore="MissingConstraints"
-            tools:layout_editor_absoluteX="108dp"
-            tools:layout_editor_absoluteY="497dp" />
+    <Button
+        android:id="@+id/button"
+        android:layout_width="194dp"
+        android:layout_height="88dp"
+        android:text="Report Time and Team"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="108dp"
+        tools:layout_editor_absoluteY="494dp" />
 
-        <TextView
-            android:id="@+id/TextPhone"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:inputType="phone"
-            android:text="+1 (___)-___-____"
-            tools:ignore="MissingConstraints"
-            tools:layout_editor_absoluteX="101dp"
-            tools:layout_editor_absoluteY="253dp" />
+    <TextView
+        android:id="@+id/TextTextPersonName2"
+        android:layout_width="184dp"
+        android:layout_height="43dp"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:text="website"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="16dp"
+        tools:layout_editor_absoluteY="393dp" />
 
-        <TextView
-            android:id="@+id/TextTextPersonName"
-            android:layout_width="221dp"
-            android:layout_height="66dp"
-            android:ems="10"
-            android:inputType="textPersonName"
-            android:text="Restaurant 1"
-            tools:ignore="MissingConstraints"
-            tools:layout_editor_absoluteX="95dp"
-            tools:layout_editor_absoluteY="41dp" />
+    <TextView
+        android:id="@+id/TextTextEmailAddress2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:inputType="textEmailAddress"
+        android:text="address"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="123dp"
+        tools:layout_editor_absoluteY="319dp" />
 
-        <TextView
-            android:id="@+id/TextTextEmailAddress2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:inputType="textEmailAddress"
-            android:text="address"
-            tools:ignore="MissingConstraints"
-            tools:layout_editor_absoluteX="101dp"
-            tools:layout_editor_absoluteY="343dp" />
+    <TextView
+        android:id="@+id/TextTextPersonName3"
+        android:layout_width="178dp"
+        android:layout_height="41dp"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:text="OPen/Closed"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="217dp"
+        tools:layout_editor_absoluteY="393dp" />
 
-        <TextView
-            android:id="@+id/TextTime"
-            android:layout_width="180dp"
-            android:layout_height="54dp"
-            android:ems="10"
-            android:inputType="time"
-            android:text="Opening Timings"
-            tools:ignore="MissingConstraints"
-            tools:layout_editor_absoluteX="16dp"
-            tools:layout_editor_absoluteY="167dp" />
+    <ImageButton
+        android:id="@+id/imageButton3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:srcCompat="@drawable/quantum_ic_arrow_back_grey600_24"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="16dp"
+        tools:layout_editor_absoluteY="54dp" />
 
-        <TextView
-            android:id="@+id/TextTextPersonName2"
-            android:layout_width="184dp"
-            android:layout_height="43dp"
-            android:ems="10"
-            android:inputType="textPersonName"
-            android:text="website"
-            tools:layout_editor_absoluteX="15dp"
-            tools:layout_editor_absoluteY="427dp"
-            tools:ignore="MissingConstraints" />
+    <TextView
+        android:id="@+id/TextTime"
+        android:layout_width="180dp"
+        android:layout_height="54dp"
+        android:ems="10"
+        android:inputType="time"
+        android:text="Opening Timings"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="20dp"
+        tools:layout_editor_absoluteY="143dp" />
 
-        <TextView
-            android:id="@+id/TextTextPersonName3"
-            android:layout_width="178dp"
-            android:layout_height="41dp"
-            android:ems="10"
-            android:inputType="textPersonName"
-            android:text="OPen/Closed"
-            tools:layout_editor_absoluteX="217dp"
-            tools:layout_editor_absoluteY="427dp"
-            tools:ignore="MissingConstraints" />
+    <RatingBar
+        android:id="@+id/ratingBar"
+        android:layout_width="180dp"
+        android:layout_height="54dp"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="215dp"
+        tools:layout_editor_absoluteY="143dp" />
 
-        <TextView
-            android:id="@+id/TextTextMultiLine"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:gravity="start|top"
-            android:inputType="textMultiLine"
-            android:text="review summary"
-            tools:ignore="MissingConstraints"
-            tools:layout_editor_absoluteX="100dp"
-            tools:layout_editor_absoluteY="613dp" />
+    <TextView
+        android:id="@+id/TextPhone"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:inputType="phone"
+        android:text="+1 (___)-___-____"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="123dp"
+        tools:layout_editor_absoluteY="259dp" />
 
-        <RatingBar
-            android:id="@+id/ratingBar"
-            android:layout_width="180dp"
-            android:layout_height="54dp"
-            tools:layout_editor_absoluteX="222dp"
-            tools:layout_editor_absoluteY="164dp"
-            tools:ignore="MissingConstraints" />
-
-        <ImageButton
-            android:id="@+id/imageButton3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:srcCompat="@drawable/quantum_ic_arrow_back_grey600_24"
-            tools:layout_editor_absoluteX="16dp"
-            tools:layout_editor_absoluteY="41dp"
-            tools:ignore="MissingConstraints" />
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
