There are a lot of changes, but this includes making the refresh button work, finalizing the second screen layout, changing how the restaurant code works, and more

--- a/app/src/main/res/layout/layout2.xml
+++ b/app/src/main/res/layout/layout2.xml
@@ -33,7 +33,7 @@
         tools:srcCompat="@tools:sample/avatars" />
 
     <ImageButton
-        android:id="@+id/imageButton4"
+        android:id="@+id/RefreshButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:srcCompat="@drawable/quantum_ic_arrow_back_grey600_24"
