--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <androidx.fragment.app.FragmentContainerView
-        xmlns:map="http://schemas.android.com/apk/res-auto"
         android:id="@+id/map"
         android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
@@ -22,9 +20,10 @@
         android:theme="?attr/actionBarTheme" />
 
     <ImageButton
-        android:id="@+id/imageButton4"
+        android:id="@+id/RefreshButton"
         android:layout_width="64dp"
         android:layout_height="64dp"
         android:backgroundTint="#00FFFFFF"
-        android:src="@drawable/refresh" />
+        android:src="@drawable/refresh"
+        android:contentDescription="@string/placeholder_content_description" />
 </RelativeLayout>
