--- a/app/src/main/res/layout/layout1.xml
+++ b/app/src/main/res/layout/layout1.xml
@@ -5,95 +5,150 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/TextTextPersonName"
-        android:layout_width="221dp"
-        android:layout_height="66dp"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:text="Restaurant 1"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="95dp"
-        tools:layout_editor_absoluteY="54dp" />
-
-    <Button
-        android:id="@+id/button"
-        android:layout_width="194dp"
-        android:layout_height="88dp"
-        android:text="Report Time and Team"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="108dp"
-        tools:layout_editor_absoluteY="494dp" />
-    <TextView
-        android:id="@+id/TextTextPersonName2"
-        android:layout_width="184dp"
-        android:layout_height="43dp"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:text="website"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="393dp" />
-
-    <TextView
-        android:id="@+id/TextTextEmailAddress2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="textEmailAddress"
-        android:text="address"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="123dp"
-        tools:layout_editor_absoluteY="319dp" />
-
-    <TextView
-        android:id="@+id/TextTextPersonName3"
-        android:layout_width="178dp"
-        android:layout_height="41dp"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:text="OPen/Closed"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="217dp"
-        tools:layout_editor_absoluteY="393dp" />
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/RestToolbar"
+        android:layout_width="0dp"
+        android:layout_height="53dp"
+        android:background="?attr/colorPrimary"
+        android:minHeight="?attr/actionBarSize"
+        android:theme="?attr/actionBarTheme"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageButton
-        android:id="@+id/imageButton3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:id="@+id/RestBackButton"
+        android:layout_width="53dp"
+        android:layout_height="53dp"
+        android:background="#00FFFFFF"
+        android:contentDescription="@string/placeholder_content_description"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/quantum_ic_arrow_back_grey600_24"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="54dp" />
+        app:tint="#FFFFFF"
+        tools:ignore="MissingConstraints" />
 
     <TextView
-        android:id="@+id/TextTime"
-        android:layout_width="180dp"
-        android:layout_height="54dp"
+        android:id="@+id/RestName"
+        android:layout_width="0dp"
+        android:layout_height="53dp"
         android:ems="10"
-        android:inputType="time"
-        android:text="Opening Timings"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="20dp"
-        tools:layout_editor_absoluteY="143dp" />
+        android:text="@string/placeholder_restaurant_name"
+        android:textAlignment="center"
+        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/RestToolbar"
+        tools:ignore="MissingConstraints" />
 
     <RatingBar
         android:id="@+id/ratingBar"
-        android:layout_width="180dp"
-        android:layout_height="54dp"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="215dp"
-        tools:layout_editor_absoluteY="143dp" />
+        android:layout_width="wrap_content"
+        android:layout_height="53dp"
+        android:numStars="5"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/RestName"/>
+
+    <LinearLayout
+        android:id="@+id/linearLayout"
+        android:layout_width="match_parent"
+        android:layout_height="53dp"
+        android:orientation="horizontal"
+        app:layout_constraintTop_toBottomOf="@+id/ratingBar"
+        tools:layout_editor_absoluteX="0dp">
+
+        <TextView
+            android:id="@+id/RestOpenTime"
+            android:layout_width="0dp"
+            android:layout_height="53dp"
+            android:layout_weight="0.5"
+            android:ems="10"
+            android:text="@string/placeholder_times"
+            android:textAlignment="center"
+            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+            android:textSize="20sp"
+            tools:ignore="MissingConstraints" />
+
+        <TextView
+            android:id="@+id/RestStatus"
+            android:layout_width="0dp"
+            android:layout_height="53dp"
+            android:layout_weight="0.5"
+            android:ems="10"
+            android:text="@string/placeholder_status"
+            android:textAlignment="center"
+            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+            android:textSize="20sp"
+            tools:ignore="MissingConstraints" />
+
+    </LinearLayout>
+
+    <ImageView
+        android:id="@+id/RestTeamIcon"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintHorizontal_chainStyle="packed"
+        app:srcCompat="@drawable/team_50"
+        tools:layout_editor_absoluteX="96dp"
+        android:contentDescription="@string/placeholder_content_description"/>
 
     <TextView
-        android:id="@+id/TextPhone"
-        android:layout_width="wrap_content"
+        android:id="@+id/RestWebsiteURL"
+        android:layout_width="0dp"
+        android:layout_height="43dp"
+        android:ems="10"
+        android:text="@string/placeholder_website"
+        android:textAlignment="center"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/RestTeamIcon"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteY="412dp" />
+
+    <TextView
+        android:id="@+id/TestAddress"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:inputType="phone"
-        android:text="+1 (___)-___-____"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="123dp"
-        tools:layout_editor_absoluteY="259dp" />
+        android:text="@string/placeholder_address"
+        android:textAlignment="center"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toTopOf="@+id/RestPhone"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/RestWebsiteURL" />
+
+
+    <TextView
+        android:id="@+id/RestPhone"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:text="@string/placeholder_phone"
+        android:textAlignment="center"
+        android:textSize="16sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/TestAddress"/>
+
+    <Button
+        android:id="@+id/ReportButton"
+        android:layout_width="200dp"
+        android:layout_height="106dp"
+        android:layout_marginTop="53dp"
+        android:text="@string/placeholder_report_text"
+        app:layout_constraintHorizontal_chainStyle="packed"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/RestPhone"
+        tools:ignore="MissingConstraints" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
