--- a/app/src/main/res/layout/activity_restaurant.xml
+++ b/app/src/main/res/layout/activity_restaurant.xml
@@ -47,16 +47,17 @@
         android:id="@+id/ratingBar"
         android:layout_width="wrap_content"
         android:layout_height="53dp"
+        android:isIndicator="true"
         android:numStars="5"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/RestName"/>
+        app:layout_constraintTop_toBottomOf="@+id/RestName" />
 
     <LinearLayout
         android:id="@+id/linearLayout"
         android:layout_width="match_parent"
-        android:layout_height="53dp"
+        android:layout_height="wrap_content"
         android:orientation="horizontal"
         app:layout_constraintTop_toBottomOf="@+id/ratingBar"
         tools:layout_editor_absoluteX="0dp">
@@ -64,7 +65,7 @@
         <TextView
             android:id="@+id/RestOpenTime"
             android:layout_width="0dp"
-            android:layout_height="53dp"
+            android:layout_height="wrap_content"
             android:layout_weight="0.5"
             android:ems="10"
             android:text="@string/placeholder_times"
@@ -76,7 +77,7 @@
         <TextView
             android:id="@+id/RestStatus"
             android:layout_width="0dp"
-            android:layout_height="53dp"
+            android:layout_height="wrap_content"
             android:layout_weight="0.5"
             android:ems="10"
             android:text="@string/placeholder_status"
@@ -87,43 +88,30 @@
 
     </LinearLayout>
 
-    <ImageView
-        android:id="@+id/RestTeamIcon"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintHorizontal_chainStyle="packed"
-        app:srcCompat="@drawable/team_50"
-        tools:layout_editor_absoluteX="96dp"
-        android:contentDescription="@string/placeholder_content_description"/>
-
     <TextView
         android:id="@+id/WaitTime"
         android:layout_width="0dp"
-        android:layout_height="43dp"
+        android:layout_height="wrap_content"
         android:ems="10"
         android:text="@string/placeholder_wait_time"
         android:textAlignment="center"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/RestTeamIcon"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
         tools:layout_editor_absoluteY="412dp" />
 
-    <TextView
-        android:id="@+id/RestWebsiteURL"
-        android:layout_width="0dp"
-        android:layout_height="43dp"
-        android:ems="10"
-        android:text="@string/placeholder_website"
-        android:textAlignment="center"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+    <ImageView
+        android:id="@+id/RestTeamIcon"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintHorizontal_chainStyle="packed"
         app:layout_constraintTop_toBottomOf="@+id/WaitTime"
-        tools:layout_editor_absoluteY="412dp" />
+        app:srcCompat="@drawable/team_50"
+        tools:layout_editor_absoluteX="96dp"
+        android:contentDescription="@string/placeholder_content_description"/>
 
     <TextView
         android:id="@+id/TestAddress"
@@ -132,12 +120,23 @@
         android:ems="10"
         android:text="@string/placeholder_address"
         android:textAlignment="center"
-        android:textSize="16sp"
-        app:layout_constraintBottom_toTopOf="@+id/RestPhone"
+        android:textSize="20sp"
+        app:layout_constraintTop_toBottomOf="@+id/RestTeamIcon"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/RestWebsiteURL"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:text="@string/placeholder_website"
+        android:textAlignment="center"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/RestWebsiteURL" />
-
+        app:layout_constraintTop_toBottomOf="@+id/TestAddress"
+        tools:layout_editor_absoluteY="412dp" />
 
     <TextView
         android:id="@+id/RestPhone"
@@ -146,10 +145,10 @@
         android:ems="10"
         android:text="@string/placeholder_phone"
         android:textAlignment="center"
-        android:textSize="16sp"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/TestAddress"/>
+        app:layout_constraintTop_toBottomOf="@+id/RestWebsiteURL"/>
 
     <Button
         android:id="@+id/ReportButton"
