--- a/app/src/main/res/layout/activity_restaurant.xml
+++ b/app/src/main/res/layout/activity_restaurant.xml
@@ -32,7 +32,7 @@
     <TextView
         android:id="@+id/RestName"
         android:layout_width="0dp"
-        android:layout_height="53dp"
+        android:layout_height="wrap_content"
         android:ems="10"
         android:text="@string/placeholder_restaurant_name"
         android:textAlignment="center"
